# redcomp

./: CMakeLists.txt  Makefile
common/: CMakeLists.txt
common/inc/redcomp/common/: instruction.h
common/src/: instruction.c
inc/redcomp/: Utils.hh
inc/redcomp/asm/: Address.hh  AssemblyDirective.hh  Instruction.hh  SegmentStorage.hh
inc/redcomp/common/: instruction.h
inc/redcomp/comp/: comp.h  flags.h  mem.h  reg.h  stk.h  utils.h
redasm/: CMakeLists.txt
redasm/inc/redcomp/asm/: Instruction.hh  LabelStorage.hh  SegmentStorage.hh
redasm/src/: Instruction.cc  SegmentStorage.cc  Utils.cc  redasm.cc
redcomp/: CMakeLists.txt
redcomp/inc/redcomp/comp/: comp.h  defs.h  flags.h  globals.h  mem.h  reg.h  stk.h  utils.h
redcomp/src/: flags.c  globals.c  mem.c  redcomp.c  reg.c  stk.c  utils.c
src/: Address.cc  AssemblyDirective.cc  Instruction.cc  LabelStorage.cc  Utils.cc  comp.c  instruction.c  mem.c  utils.c
tst/: redasm.cc  redcomp.c
