cmake_minimum_required(VERSION 3.10)
project(redasm)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 11)
file(GLOB SOURCES "src/*.c" "src/*.cc")
add_executable(redasm ${SOURCES})
target_include_directories(redasm PRIVATE inc)
target_include_directories(redasm PRIVATE ../common/inc)
target_link_libraries(redasm LINK_PUBLIC redcomp_common)