cmake_minimum_required(VERSION 3.10)
project(redcomp)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 11)
file(GLOB SOURCES "src/*.c" "src/*.cc")
add_executable(redcomp ${SOURCES})
target_include_directories(redcomp PRIVATE inc)
target_include_directories(redcomp PRIVATE ../common/inc)
target_link_libraries(redcomp LINK_PUBLIC redcomp_common)